# finance_agent

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  test.py  ui.py
ollama/: Dockerfile
src/: .env.setup
src/agent/: agent_supervisor.py  finance_agent.py  pyproject.toml  supervisor_schema.py
src/agent/agent_schemas/: output_schemas.py
src/agent/supervised/: conversational_agent.py  finance_agent.py  summarizer_model.py
src/agent/tool_helper/: helper.py
src/api/: agent_api.py  api_schema.py  app.py  pyproject.toml
src/api/agent/: agent_supervisor.py  supervisor_schema.py
src/api/agent/supervised/: conversational_agent.py  summarizer_model.py
src/api/db/: data_storage.py
src/api/vectordb/: database.py
src/streamlit/: ui.py
src/ui/: grad.py  pyproject.toml
src/utils/: logger.py
src/vectordb/: database.py  databse.py
