[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.0.18",
    "yfinance>=0.2.66",
    "beautifulsoup4>=4.14.2",
    "logfire>=4.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
